for a number of reasons div is better than iframe for the purpose of showing html descriptions
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@173 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/content/fireflix.css
+++ b/content/fireflix.css
@@ -72,6 +72,13 @@ menuitem.menuhead {
  font-weight: bold;
 }
 
+div#searchresult_description {
+ min-height: 5em; max-height: 8em;
+ overflow: auto;
+ font-size: 90%;
+ margin: 0.1ex 0.5ex;
+}
+
 #copying div {
  margin: 1ex 1em;
  font-family: courier, monospace;
