cosmetics: border about search results preview thumbnail
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@175 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/content/fireflix.css
+++ b/content/fireflix.css
@@ -44,7 +44,7 @@ groupbox#upload_file_props label {
  text-align: right;
 }
 
-image#set_photo, image#set_primary {
+image#search_photo, image#set_photo, image#set_primary {
  border: black 1px solid;
 }
 
