--- a/content/fireflix.css
+++ b/content/fireflix.css
@@ -87,3 +87,13 @@ div#searchresult_description {
  border: dotted 1px gray;
  background: white;
 }
+
+label#search_page {
+ font-weight: bold;
+ background: white; color: #404040;
+ border-color: #c0c0c0 #404040 #404040 #c0c0c0;
+ border-style: solid;
+ border-width: 1px;
+ -moz-border-radius: 1em;
+ padding: 0.5ex 1ex;
+}
