make file properties visible but readonly for non-pending downloads. And while we're at it show failure reason for failed uploads.
git-svn-id: http://svn.klever.net/kin/fireflix/trunk@238 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/content/fireflix.css
+++ b/content/fireflix.css
@@ -43,6 +43,14 @@ groupbox#upload_file_props label {
  text-align: right;
 }
 
+description#upload_failure {
+ border-top: solid 1px red;
+ margin: 0px; padding: 2px;
+ text-align: left;
+ font-size: 85%;
+ line-height: 105%;
+}
+
 image#search_photo, image#set_photo, image#set_primary {
  border: black 1px solid;
 }
