--- a/content/fireflix.css
+++ b/content/fireflix.css
@@ -128,6 +128,27 @@ html div.copyright a {
  text-decoration: none;
 }
 
+html p.whatsnew {
+ font-size: 80%;
+ margin: 0px 0px 0px 50%;
+ text-align: center;
+}
+html p.whatsnew a {
+ display: block;
+ padding: 1px;
+ border-style: solid;
+ border-width: 1px;
+ border-color: #c0c0c0 #808080 #808080 #c0c0c0;
+ background: white; color: black;
+ text-decoration: none;
+}
+html p.whatsnew a em { font-style: normal; font-weight: bold; }
+html p.whatsnew a:hover {
+ border-color: #808080 #c0c0c0 #c0c0c0 #808080;
+ background: black; color: white;
+}
+html p.whatsnew a:hover em { color: red; }
+
 button.lean {
  min-width: 1ex;
 }
