restyled for firefox 3
git-svn-id: file:///home/hacker/svns/kin/fireflix/trunk@309 fe716a7a-6dde-0310-88d9-d003556173a8

--- a/content/fireflix.css
+++ b/content/fireflix.css
@@ -37,6 +37,9 @@ groupbox#upload_file_props,
 groupbox#set_props,
 groupbox#set_photo_props {
  background: white;
+ -moz-border-radius: 1ex;
+ border: 1px outset;
+ display: -moz-box;
 }
 
 groupbox#upload_file_props label {
